Clear sonar observations